--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "devDependencies": {
     "@types/node": "^24.0.10",
     "@vitejs/plugin-react": "^4.6.0",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "10.4.19",
     "crypto-browserify": "^3.12.1",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
+    "postcss": "8.4.35",
+    "tailwindcss": "3.4.1",
     "typescript": "^5.8.3",
     "vite": "^7.0.2",
     "vite-plugin-ruby": "^5.1.1"
