--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite-plugin-ruby": "^5.1.1"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-three/drei": "^10.4.4",
     "@react-three/fiber": "^9.2.0",
     "@types/react": "^19.1.8",
