--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/three": "^0.178.0",
+    "chart.js": "^4.5.0",
+    "chartkick": "^5.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
