--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./app/frontend/*"]
+      "@/*": ["./app/frontend/*"],
+      "@/components/*": ["./app/frontend/components/*"]
     },
     "jsx": "react-jsx",
     "strict": true,
@@ -13,6 +14,6 @@
     "skipLibCheck": true,
     "types": ["vite/client", "node"]
   },
-  "include": ["app/frontend/**/*"],
+  "include": ["app/frontend/**/*", "vite.config.ts"],
   "exclude": ["node_modules"]
 }
