--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "vite": "^7.0.2",
     "vite-plugin-ruby": "^5.1.1"
   },
+  "scripts": {
+    "dev": "vite",             
+    "build": "vite build",     
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@react-three/drei": "^10.4.4",
