--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "type": "module",
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.28.0",
     "@types/node": "^24.0.10",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "10.4.19",
@@ -13,8 +14,8 @@
     "vite-plugin-ruby": "^5.1.1"
   },
   "scripts": {
-    "dev": "vite",             
-    "build": "vite build",     
+    "dev": "vite",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
