--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "@babel/plugin-proposal-decorators": "^7.28.0",
     "@types/node": "^24.0.10",
     "@vitejs/plugin-react": "^4.6.0",
-    "autoprefixer": "10.4.19",
+    "autoprefixer": "^10.4.21",
     "crypto-browserify": "^3.12.1",
-    "postcss": "8.4.35",
+    "postcss": "^8.5.6",
     "tailwindcss": "3.4.1",
     "typescript": "^5.8.3",
     "vite": "^7.0.2",
