--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "vite-plugin-ruby": "^5.1.1"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
