--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -9,5 +9,8 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "vite": "^7.0.4"
   }
 }
