--- a/app/frontend/tsconfig.json
+++ b/app/frontend/tsconfig.json
@@ -19,6 +19,6 @@
     "skipLibCheck": true,
     "types": ["vite/client", "node"]
   },
-  "include": ["app/frontend/**/*", "vite.config.ts"],
+  "include": ["app/frontend/**/*", "app/frontend/vite.config.ts"],
   "exclude": ["node_modules"]
 }
