--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
-    "@react-three/drei": "^10.4.4",
-    "@react-three/fiber": "^9.2.0",
     "@types/chart.js": "^4.0.1",
-    "@types/three": "^0.178.0",
     "chart.js": "^4.5.0",
     "chartkick": "^5.0.1",
     "class-variance-authority": "^0.7.1",
@@ -22,8 +19,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
-    "three": "^0.178.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.28.0",
