--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-chartkick": "^0.5.4",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
